# solana-metaversus-staking-contracts

./: Anchor.toml  README.md  package-lock.json  package.json
programs/mtvs-token-staking/: Cargo.toml
programs/mtvs-token-staking/src/: account.rs  constants.rs  error.rs  lib.rs  utils.rs
programs/mtvs-token-staking/src/instructions/: add_reward.rs  change_creator.rs  change_tier_setting.rs  change_token_mint.rs  change_treasury.rs  claim_reward.rs  init_user_data.rs  initialize.rs  mod.rs  remove_reward.rs  stake.rs  transfer_ownership.rs  withdraw.rs
programs/mtvs-token-staking/src/states/: global_state.rs  mod.rs  user_data.rs  user_state.rs
scripts/: constants.ts  keys.ts  mintNFT.ts  s-init.ts
tests/: mtvs-token-staking.ts  program.ts
tests/config/: accounts.ts  users.ts
tests/nft/: borsh.ts  ids.ts  metadata.ts  mint.ts  utils.ts
tests/utils/: constants.ts  instructions.ts  keys.ts  utils.ts
tests/utils/config/: accounts.ts  users.ts
