[package]
name = "mtvs-token-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mtvs_token_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.22.1", features = ["init-if-needed"]}
spl-token-metadata = { version = "0.0.1", features = ["no-entrypoint"]}
anchor-spl = "0.22.1"
spl-token = "3.3.0"
solana-program = "=1.9.13"